--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -87,4 +87,7 @@ body {
     height: 200px;
     background-color: #dfdfdf;
     padding: 20px;
+    border: 2px solid #000;
+    margin: 10px;
+    display: inline-block;
 }
